# soat

./: .gitignore  .gitmodules  CMakeLists.txt  googletest-download.in
cmake/: AnalysisConfig.cmake  CpackConfig.cmake  DoxygenTarget.cmake  GetGitRevisionDescription.cmake  PackageConfigurator.cmake
ext/ceres-solver/: CMakeLists.txt  CeresConfig-install.cmake
ext/ceres-solver/cmake/: uninstall.cmake
ext/ceres-solver/config/ceres/internal/: config.h
ext/ceres-solver/internal/ceres/: CMakeLists.txt
ext/ceres-solver/internal/ceres/miniglog/glog/: logging.h
ext/glog/x64/include/glog/: config.h
ext/glog/x64/lib/: glog.lib
ext/glog/x64/lib/cmake/glog/: glog-targets.cmake
ext/glog/x86/include/glog/: config.h
ext/glog/x86/lib/: glog.lib
ext/glog/x86/lib/cmake/glog/: glog-targets.cmake
ext/hdf5-1.10.2/: CMakeLists.txt
ext/hdf5-1.10.2/c++/src/: CMakeLists.txt
ext/zlib-1.2.11/: CMakeLists.txt
include/: CMakeLists.txt
include/Analysis/: Algorithms.h  AnalysisExport.h  CMakeLists.txt  DataFile.h  DataTypes.h  FixationAnalysis.h  FixationEstabilityAnalysis.h  GuidedSaccadeAnalysis.h  HDF5.h  MicrosaccadeAnalysis.h  Numerics.h  OKNAnalysis.h  PupillometryAnalysis.h  PursuitAnalysis.h  SmoothConvergenceAnalysis.h  Version.h.in
src/: Algorithms.cpp  AnalysisExport.cpp  CMakeLists.txt  DataFile.cpp  FixationAnalysis.cpp  FixationEstabilityAnalysis.cpp  GuidedSaccadeAnalysis.cpp  HDF5.cpp  MicrosaccadeAnalysis.cpp  Numerics.cpp  OKNAnalysis.cpp  PupillometryAnalysis.cpp  PursuitAnalysis.cpp  SmoothConvergenceAnalysis.cpp  TestHDF5Conversion.cpp  TestSegmentation.cpp
test/: CMakeLists.txt
test/testAlgorithms/: CMakeLists.txt  main.cpp  testAlgorithms.cpp  testAlgorithms.h
